@@ -3,7 +3,7 @@
 use strict;
 $^W = 1;
 
- use Test::More tests => 94;
+ use Test::More tests => 90;
 #use Test::More "no_plan";
 
 my %err;
@@ -57,8 +57,7 @@ parse_err 2032,  2, qq{ \r};
 parse_err 2034,  4, qq{1, "bar",2};
 parse_err 2037,  1, qq{\0 };
 
-unless (($ENV{AUTOMATED_TESTING} || 0) == "1") {
-    my @warn;
+{   my @warn;
     local $SIG{__WARN__} = sub { push @warn, @_ };
     $csv->error_diag ();
     ok (@warn == 1, "Got error message");
@@ -85,26 +84,9 @@ $csv = Text::CSV_XS->new ({ auto_diag => 1 });
     ok (@warn == 1, "1 - One error");
     like ($warn[0], qr '^# CSV_XS ERROR: 2027 -', "1 - error message");
     }
-{   my @warn;
-    ok ($csv->{auto_diag} = 2, "auto_diag = 2 to die");
+{   ok ($csv->{auto_diag} = 2, "auto_diag = 2 to die");
     eval { $csv->parse ('"","') };
     like ($@, qr '^# CSV_XS ERROR: 2027 -', "2 - error message");
     }
-
-package Text::CSV_XS::Subclass;
-
-use base "Text::CSV_XS";
-
-use Test::More;
-
-ok (1, "Subclassed");
-
-my $csvs = Text::CSV_XS::Subclass->new ();
-is ($csvs->error_diag (), "",		"Last failure for new () - OK");
-
-is (Text::CSV_XS::Subclass->new ({ ecs_char => ":" }), undef, "Unsupported option");
-
-is (Text::CSV_XS::Subclass->error_diag (),
-    "INI - Unknown attribute 'ecs_char'",	"Last failure for new () - FAIL");
 
 1;
